@@ -1,8 +1,8 @@
-ef3d1a6493e3e4ba87e241662fc9eb32 *DESCRIPTION
+b83b5d32b959f4fd8468137b69ea94be *DESCRIPTION
 2af1830d90cb13e54f905f5293dead84 *NAMESPACE
 5f993b6d2ba607402321c21481a824a5 *R/bernstein.R
-c0f11765a4fde8c1f73289cc8de18b1f *R/box_bases.R
-020a805e92969eb4628ac2737898300a *R/cbind_bases.R
+3126d7ad938777a2f05214a714d0e00f *R/box_bases.R
+e29be446cc3f19e171e814ac61caefbc *R/cbind_bases.R
 dfaa6e61ada2f5144c1952ffddde84a8 *R/cyclic.R
 30f02e4dc9b1807fcbab770c530efc9b *R/factor.R
 e3f0180f2400a1703b1aa56a57fd8045 *R/formula.R
@@ -13,7 +13,7 @@ d59c91433a5f923ac2067047511de586 *R/legendre.R
 306bc7ed8a1b3746a0e9af255ddcd37a *R/polynomial.R
 b28a85143635108a8a27f808ccc28eff *R/utils.R
 1c9695dee7162d6e72883b552906e753 *cleanup
-454ee42c57949521070c2bfed9bdc4a3 *inst/NEWS.Rd
+4c7075c66d81951d5324956aed970551 *inst/NEWS.Rd
 8cb66017e7b800b4a368f0b658049816 *man/Bernstein_basis.Rd
 e302699142ee0fef7062985a604afd3d *man/Legendre_basis.Rd
 e346889cf14daf60e656a13dd60ac16a *man/as.basis.formula.Rd
@@ -26,6 +26,6 @@ fd29262aeecbb02e20c43c2ee3af8dd0 *man/c.Rd
 2f57e81ec1583c2c7d40c056b7101d0c *src/L2B.c
 7f028180ac2b6330136711089e01fa0a *src/init.c
 9222a7a3aa0c7421e35a01db4f2a9c1f *tests/Bernstein-Ex.R
-c36416d15f0aab2b9b3acad35e76fca7 *tests/bases-Ex.R
+677a2888a82bdafebfa1e181b0be6997 *tests/bases-Ex.R
 fead45619fac4f6d180ef0b567157141 *tests/formula.R
 b8914cfcc9e669648b545d914c31e1dc *tests/predict.R
